# psopt_cmake

./: CMakeLists.txt  README.md  build.sh
dmatrix/: CMakeLists.txt  dmatrix.pc.in
dmatrix/examples/: CMakeLists.txt
dmatrix/include/: dmatrixv.h
dmatrix/src/: dmatrixv.cxx
psopt/: CMakeLists.txt  psopt.pc.in
psopt/examples/: CMakeLists.txt
psopt/src/: IPOPT_interface.cxx  evaluate.cxx  parameter_estimation.cxx  plot.cxx  print.cxx  psopt.h
